add boilerplate swagger api for ffmpeg service
